kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: epicenter-service
  name: epicenter-service
  namespace: epicenter
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: epicenter-server
status:
  loadBalancer: {}
