kubernetes/ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "epicenter-ingress"
  namespace: "epicenter"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: "epicenter-service"
            port:
              number: 80
status:
  loadBalancer: {}
